# tree-sitter-fpp

./: CMakeLists.txt  Cargo.toml  Makefile  README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/c/: tree-sitter-fpp.pc.in
bindings/c/tree_sitter/: tree-sitter-fpp.h
bindings/rust/: build.rs  lib.rs
grammar/: components.js  expressions.js  literals.js  names.js  ports.js  state_machine.js  topology.js  types.js  utils.js
queries/fpp/: highlights.scm
src/: grammar.json  node-types.json  parser.c
